# quantum-purse-v2

./: .gitignore  .gitmodules  BACKLOG.md  CHANGELOG.md  Cargo.toml  README.md  build.sh  launch-gui.sh  launch.sh  mockup-ui.html
.github/workflows/: ci.yml  release.yml
crates/ckb-node/: Cargo.toml
crates/ckb-node/src/: client.rs  config.rs  lib.rs  process.rs
crates/ckb-node/src/client/: full.rs  light.rs  mod.rs
crates/ckb-node/src/rpc/: mod.rs
crates/ckb-node/src/wallet_helpers/: lc.rs  mod.rs  scripts.rs
crates/ckb-node/src/wallet_helpers/queries/: balance.rs  dao_cells.rs  mod.rs  spendable.rs  tx_history.rs
crates/ckb-node/src/wallet_helpers/tx_builder/: dao.rs  mod.rs  signing.rs  transfer.rs  utils.rs
crates/credential-gate/: Cargo.toml
crates/credential-gate/src/: lib.rs
crates/credential-gate/src/hw_backed/: linux_tpm.rs  macos.rs
crates/credential-gate/src/sw_backed/: mod.rs
crates/key-vault-cli/: Cargo.toml
crates/key-vault-cli/src/: main.rs
crates/key-vault-core/: Cargo.toml
crates/key-vault-core/src/: constants.rs  lib.rs  types.rs
crates/key-vault-core/src/db/: mod.rs
crates/key-vault-core/src/utilities/: mod.rs  tests.rs
crates/key-vault-gui/: Cargo.toml  entitlements.plist
crates/key-vault-gui/scripts/: apple-app-site-association  build-and-sign.sh  readme.md
crates/key-vault-gui/src/: main.rs  window_handle.rs
crates/keychain/: Cargo.toml
crates/keychain/src/: fido2.rs  lib.rs  linux.rs  linux_tpm.rs  macos.rs  windows.rs  windows_hello.rs
crates/keychain/src/hw_backed/: fido2.rs  linux_tpm.rs  mod.rs  secure_enclave.rs  windows_hello.rs
crates/keychain/src/sw_backed/: linux_secret_service.rs
crates/node-manager/: Cargo.toml
crates/node-manager/src/: config.rs  error.rs  lib.rs  light_client_spawn.rs  process.rs  rpc.rs
crates/node-manager/src/queries/: balance.rs  dao_cells.rs  mod.rs  spendable.rs  tx_history.rs
crates/node-manager/src/tx_builder/: dao.rs  mod.rs  signing.rs  transfer.rs  utils.rs
crates/passkey-prf/: Cargo.toml
crates/passkey-prf/src/: bridge.rs  lib.rs
crates/qpv2-cli/: Cargo.toml
crates/qpv2-cli/src/: main.rs
crates/qpv2-core/: Cargo.toml
crates/qpv2-core/src/: constants.rs  containers.rs  lib.rs  macros.rs  pinentry.rs  types.rs
crates/qpv2-core/src/db/: mod.rs  wallets.rs
crates/qpv2-core/src/utilities/: mod.rs  tests.rs
crates/qpv2-gui/: Cargo.toml  DESIGN.md  build.rs  entitlements.plist
crates/qpv2-gui/scripts/: apple-app-site-association  build-and-sign.sh  bundle.sh  config.sh  sign.sh
crates/qpv2-gui/src/: ckb.rs  fetcher.rs  keychain.rs  light_client.rs  main.rs  passkey.rs  pinentry.rs  poller.rs  transactor.rs  tx_history.rs  tx_history_store.rs  types.rs  utils.rs  wallet.rs
crates/qpv2-gui/src/handlers/: fetcher.rs  mod.rs  passkey.rs  poller.rs  signer.rs  transactions.rs  wallet.rs
crates/qpv2-gui/src/ops/: dao.rs  mod.rs  passkey.rs  transfer.rs  wallet.rs
crates/qpv2-gui/src/ui/: accounts.rs  common.rs  cosigner.rs  dao.rs  dashboard.rs  main_stages.rs  mod.rs  multisig.rs  multisig_modal.rs  node_manager.rs  node_selector.rs  setup.rs  sidebar.rs  transfer.rs  utils.rs  wallet_modal.rs  wallet_selector.rs  wallets.rs
crates/qpv2-gui/src/ui_ops/: fetcher.rs  mod.rs  poller.rs  signer.rs  transactions.rs  tx_builder.rs
src/: containers.rs  lib.rs  macros.rs  main.rs  secure_string.rs  secure_vec.rs  types.rs
src/utilities/: mod.rs
