[package]
name = "ckb-node"
version = "0.1.0"
edition = "2021"
description = "CKB node abstraction: process lifecycle, unified client (full node, light client, public RPC), and wallet-domain helpers."
license = "MIT"

[dependencies]
qpv2-core = { path = "../qpv2-core" }
ckb-jsonrpc-types = "=1.0.2"
ckb-sdk = { version = "5.0.0", features = ["native-tls-vendored"] }
ckb-types = "=1.0.1"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
ckb-fips205-utils = { path = "../ckb-fips205-utils", features = ["signing"] }
ckb-gen-types = { version = "1.0.2", default-features = false }
reqwest = { version = "0.12", features = ["blocking", "json"] }
thiserror = "2.0"
dirs = "6.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
