[package]
name = "key-vault-gui"
version = "0.1.0"
edition = "2021"
description = "GUI for SPHINCS+ key vault with Passkey PRF / Touch ID support."
license = "MIT"

[[bin]]
name = "qpkv-gui"
path = "src/main.rs"

[dependencies]
key-vault-core = { path = "../key-vault-core" }
passkey-prf = { path = "../passkey-prf" }
eframe = "0.33"
hex = "0.4.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSResponder"] }
raw-window-handle = "0.6"
