[package]
name = "qpv2-cli"
version = "1.0.0"
edition = "2021"
description = "A SPHINCS+ wallet for CKB blockchain."
repository = "https://github.com/quantumpurse/quantum-purse-v2.git"
license = "MIT"

[[bin]]
name = "qpv2-cli"
path = "src/main.rs"

[dependencies]
qpv2-core = { path = "../qpv2-core" }
clap = { version = "4.5.60", features = ["derive"] }
rpassword = "7.4.0"
hex = "0.4.3"
