[package]
name = "qpv2-cli"
version = "1.0.0"
edition = "2021"
description = "A SPHINCS+ wallet for CKB blockchain."
repository = "https://github.com/quantumpurse/quantum-purse-v2.git"
license = "MIT"

[[bin]]
name = "qpv2-cli"
path = "src/main.rs"

[dependencies]
qpv2-core = { path = "../qpv2-core" }
keychain = { path = "../keychain", features = ["fido2"] }
ckb-node = { path = "../ckb-node" }
clap = { version = "4.5.60", features = ["derive"] }
rpassword = "7.4.0"
hex = "0.4.3"
serde_json = "1.0"
ckb-sdk = { version = "5.0.0", features = ["native-tls-vendored"] }
ckb-types = "=1.0.1"
ckb-jsonrpc-types = "=1.0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
names = { version = "0.14.0", default-features = false }
