[package]
name = "qpv2-gui"
version = "0.1.0"
edition = "2021"
description = "GUI for SPHINCS+ key vault with Passkey PRF / Touch ID support."
repository = "https://github.com/quantumpurse/quantum-purse-v2.git"
license = "MIT"

[[bin]]
name = "qpv2-gui"
path = "src/main.rs"

[dependencies]
qpv2-core = { path = "../qpv2-core" }
ckb-node = { path = "../ckb-node" }
ckb-fips205-utils = { path = "../ckb-fips205-utils", features = ["signing"] }
ckb-gen-types = { version = "1.0.2", default-features = false }
ckb-jsonrpc-types = "1.0.2"
ckb-sdk = { version = "5.0.0", features = ["native-tls-vendored"] }
ckb-types = "=1.0.1"
eframe = "0.33"
hex = "0.4.3"
pinentry = "0.8.0"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_13", "OSX_10_15"] }
